--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,11 +1,11 @@
-iframe {
-  height: 100%;
-  transform: scale(0.5, 0.5);
-  transform-origin: top left;
-  width: 100%;
+svg {
+  background-color: #eee;
 }
 
-.iframe-container {
-  height: 500px;
-  width: 1000px;
+.tooltip {
+  background-color: #333;
+  border-radius: 5px;
+  color: white;
+  font-weight: bold;
+  padding: 5px;
 }
