--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,7 +1,41 @@
+html,
+body {
+  height: 100%;
+  width: 100%;
+}
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 svg {
   background-color: #eee;
 }
 
+.container {
+  display: flex;
+  flex-direction: column;
+  max-width: 960px;
+}
+
+.symbols {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+}
+.symbols div {
+  color: white;
+  /*flex: 1;*/
+  width: 33%;
+}
 .tooltip {
   background-color: #333;
   border-radius: 5px;
